# sauerkraut

./: CMakeLists.txt  Dockerfile  README.md  requirements.txt  setup.py  spack.yaml
.github/workflows/: test.yml
examples/: combined_copy_serialize.py  copy_then_run.py  copy_then_serialize.py  exclude_dead_locals.py  exclude_locals.py  for_loop.py  replace_locals.py  resume_globals.py  with_globals.py  with_greenlet.py  with_numpy.py
migrames/: CMakeLists.txt  migrames.C  mymodule.c
migrames/buffer/: CMakeLists.txt  code_unit.proto  py_code_object.fbs  py_code_object.proto  py_frame.fbs  py_frame.proto  py_interpreter_frame.fbs  py_interpreter_frame.proto  py_object.fbs  py_object.proto  stackref.proto
migrames/buffer/include/: offsets.h
migrames/include/: py_structs.h  pyref.h  utils.h
migrames/serdes/: CMakeLists.txt
migrames/serdes/include/: serdes.h
sauerkraut/: CMakeLists.txt  __init__.py  liveness.py  sauerkraut.C
sauerkraut/buffer/: CMakeLists.txt
sauerkraut/greenlet_compat/: CMakeLists.txt  find_greenlet.py  greenlet_compat.C
sauerkraut/greenlet_compat/include/: greenlet_compat.h
sauerkraut/include/: py_structs.h  pyref.h  sauerkraut_cpython_compat.h  utils.h
sauerkraut/serdes/: CMakeLists.txt
sauerkraut/serdes/include/: serdes.h
test/: README.md  test.py
